--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/lexend": "^5.0.18",
+    "@fontsource/merriweather": "^5.0.13",
     "astro": "^4.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
