--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --config jest.config.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/jest": "29.5.12",
     "@types/node": "20.14.11",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -42,10 +44,13 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.2.1",
+    "jest": "29.7.0",
     "postcss": "8.4.39",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.5",
     "tailwindcss": "3.4.6",
+    "ts-jest": "29.2.4",
+    "ts-node": "10.9.2",
     "typescript": "5.5.3"
   },
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
