--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
+    "@lukemorales/query-key-factory": "1.3.4",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-checkbox": "1.1.1",
     "@radix-ui/react-dialog": "1.1.1",
@@ -20,8 +21,11 @@
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
+    "@tanstack/react-query": "5.51.21",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "date-fns": "3.6.0",
+    "embla-carousel-react": "8.1.8",
     "framer-motion": "11.3.12",
     "lucide-react": "0.414.0",
     "next": "14.2.5",
