--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
     "@tanstack/react-query": "5.51.21",
+    "@turf/turf": "7.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "date-fns": "3.6.0",
@@ -38,18 +39,23 @@
     "react-hook-form": "7.52.1",
     "react-icons": "5.2.1",
     "react-map-gl": "7.1.7",
+    "recharts": "2.12.7",
     "rooks": "7.14.1",
+    "supercluster": "8.0.1",
     "tailwind-merge": "2.4.0",
     "tailwindcss-animate": "1.0.7",
+    "turf-point": "2.0.1",
     "use-debounce": "10.0.2",
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/geojson": "7946.0.14",
     "@types/jest": "29.5.12",
     "@types/mapbox-gl": "3.4.0",
     "@types/node": "20.14.11",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/supercluster": "7.1.3",
     "@typescript-eslint/eslint-plugin": "7.16.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
