--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "3.9.0",
     "@lukemorales/query-key-factory": "1.3.4",
+    "@mailchimp/mailchimp_marketing": "3.0.80",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-checkbox": "1.1.1",
     "@radix-ui/react-dialog": "1.1.1",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@types/geojson": "7946.0.14",
     "@types/jest": "29.5.12",
+    "@types/mailchimp__mailchimp_marketing": "3.0.20",
     "@types/mapbox-gl": "3.4.0",
     "@types/node": "20.14.11",
     "@types/react": "18.3.3",
