--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "14.2.5",
     "query-string": "9.1.0",
     "react": "18.3.1",
+    "react-country-flag": "3.1.0",
     "react-dom": "18.3.1",
     "react-hook-form": "7.52.1",
     "react-icons": "5.2.1",
