--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@artsy/fresnel": "7.1.4",
     "@hookform/resolvers": "3.9.0",
     "@lukemorales/query-key-factory": "1.3.4",
     "@mailchimp/mailchimp_marketing": "3.0.80",
