--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.1.8",
     "framer-motion": "11.3.12",
+    "hamburger-react": "2.5.1",
     "jotai": "2.9.2",
     "lucide-react": "0.414.0",
     "maplibre-gl": "4.5.1",
