--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "0.414.0",
     "maplibre-gl": "4.5.1",
     "next": "14.2.5",
+    "next-plausible": "3.12.2",
     "query-string": "9.1.0",
     "react": "18.3.1",
     "react-country-flag": "3.1.0",
