--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -7,7 +7,7 @@ applications:
 
     # The runtime the application uses.
     # Complete list of available runtimes: https://docs.upsun.com/app/reference/type/
-    type: "nodejs:24"
+    type: "nodejs:22"
 
     # Choose which container profile (ratio CPU+RAM) your app will use. Default value comes from the image itself.
     # More information: https://docs.upsun.com/anchors/resources/manage/configuration/profiles/adjust/
@@ -18,10 +18,10 @@ applications:
     # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
     # side is in the form `<service name>:<endpoint name>`.
     # More information: https://docs.upsun.com/app/reference/relationships/
-    
+
     # relationships:
     #   db:
-    
+
 
     # Mounts define directories that are writable after the build is complete.
     # More information: https://docs.upsun.com/app/reference/mounts/
@@ -29,8 +29,8 @@ applications:
       "/.npm":
         source: "storage"
         source_path: "npm"
-        
-      
+
+
 
     # The web key configures the web server running in front of your app.
     # More information: https://docs.upsun.com/app/reference/web/
@@ -40,7 +40,7 @@ applications:
       commands:
         # The command to launch your app. If it terminates, it’s restarted immediately.
         # You can use the $PORT or the $SOCKET environment variable depending on the socket family of your upstream
-        start: "npx next start -p $PORT"
+        start: "node server.js"
       # You can listen to a UNIX socket (unix) or a TCP port (tcp, default).
       # Whether your app should speak to the webserver via TCP or Unix socket. Defaults to tcp
       # More information: https://docs.upsun.com/app/reference/web/upstream/socket-family/
@@ -53,8 +53,8 @@ applications:
       locations:
         "/":
           passthru: true
-          
-        
+
+
 
     # Alternate copies of the application to run as background processes.
     # More information: https://docs.upsun.com/app/reference/workers/
@@ -97,14 +97,17 @@ applications:
       # More information: https://docs.upsun.com/app/hooks/compare/compare/build/
       build: |
         set -eux
-        npm exec next build
-        
+        npm install -g corepack
+        corepack enable pnpm && pnpm i --frozen-lockfile
+        pnpm add sharp
+        pnpm run build
+
       # The deploy hook is run after the app container has been started, but before it has started accepting requests.
       # More information: https://docs.upsun.com/app/hooks/compare/compare/deploy/
       deploy: |
         set -eux
-        # echo 'Put your deploy command here'
-        
+        node server.js
+
 
       # The post_deploy hook is run after the app container has been started and after it has started accepting requests.
       # More information: https://docs.upsun.com/app/hooks/compare/compare/post-deploy/
