--- a/.upsun/config.yaml
+++ b/.upsun/config.yaml
@@ -14,6 +14,7 @@ applications:
       build: |
         set -ex
         pnpm install
+        pnpm add sharp
         pnpm run build
 
       deploy: |
